<resources>
    <string name="app_name">BeMyVoice</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="have_an_existing_account"><u><![CDATA[<<Have an Existing account?]]></u></string>
    <string name="or_sign_up_with">or Sign Up with</string>
    <string name="or_login_with">or Login with</string>
    <string name="create_new_account"><u><![CDATA[<<Create New account]]></u></string>
    <string name="forget_password"><u><![CDATA[Forget Password>>]]></u></string>
    <string name="send_email">Send Email</string>
    <string name="go_back_to_login"><u><![CDATA[<<Go back to Login]]></u></string>

    <string name="no_connection">No internet connection! Cannot be translated!</string>
    <string name="save_user_data">Save User Data</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="forgot_password">Forgot Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="favourite">Favourite</string>
    <string name="video_dictionary">Video Dictionary</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="be_my_voice">BeMyVoice</string>
    <string name="neutral">Neutral</string>
    <string name="angry">Angry</string>
    <string name="shocked">Shocked</string>
    <string name="blessed">Blessed</string>
    <string name="happy">Happy</string>
    <string name="sad">Sad</string>
    <string name="sick">Sick</string>
    <string name="celebrate">Celebrate</string>
    <string name="enter_the_text_here">Enter the text here</string>
    <string name="translated_text_will_be_displayed_here">Translated text will be displayed here</string>
    <string name="saved_lang1_default_key">English</string>
    <string name="saved_lang1_key">English</string>
    <string name="saved_lang2_default_key" />
    <string name="saved_lang2_key">Select Language</string>
    <string name="translate">Translate</string>
    <string name="emotions_voice">Emotions Voice</string>
    <string name="pitch">Pitch</string>
    <string name="speed">Speed</string>
    <string name="language">Language</string>
    <string name="voice_style">Voice Style</string>
    <string name="test_voice">Test Voice</string>
    <string name="saved_voice_lang_default_key">English (US)</string>
    <string name="saved_voice_lang_key">English (US)</string>
    <string name="saved_voice_key">en-US-Standard-B</string>
    <string name="saved_voice_default_key">en-US-Standard-B</string>
    <string name="saved_chosen_emotion">neutral</string>
    <string name="saved_default_emotion">neutral</string>
    <!--    <string name="saved_default_pitch">2000</string>-->
    <!--    <string name="saved_default_speed">75</string>-->
    <!--    <string name="default_neutral_pitch">2000</string>-->
    <!--    <string name="default_neutral_speed">75</string>-->
    <!--    <string name="default_happy_speed">117</string>-->
    <!--    <string name="default_happy_pitch">2039</string>-->
    <!--    <string name="default_sad_speed">66</string>-->
    <!--    <string name="default_sad_pitch">1026</string>-->
    <!--    <string name="default_sick_speed">69</string>-->
    <!--    <string name="default_sick_pitch">2921</string>-->
    <!--    <string name="default_angry_pitch">1596</string>-->
    <!--    <string name="default_angry_speed">75</string>-->
    <!--    <string name="default_shocked_speed">80</string>-->
    <!--    <string name="saved_shocked_pitch">2557</string>-->
    <string name="logout">Logout</string>
    <string name="sample">Sample</string>
    <string name="no_favourites">No Favourites</string>
    <string name="search_word">Search word</string>
    <string name="search">Search</string>
    <string name="add_word">Add Word</string>
    <string name="no_videos_availbale_for_the_word">No videos availbale for the word</string>
    <string name="choose_video">Choose Video</string>
    <string name="txt_take_camera">Open Camera</string>
    <string name="txt_gallery">Open Gallery</string>
    <string name="txt_option">Options</string>
    <string name="txt_enter_fixed_trim_duration_in_secs">Enter fixed duration</string>
    <string name="hint_min_gap">Enter min time in sec</string>
    <string name="hint_min_max">Enter min time in sec</string>
    <string name="txt_max_duration_secs">Enter max time in sec</string>
    <string name="txt_min_max">choose max min vid</string>
    <string name="upload_video">Upload Video</string>
    <string name="uploading_video">Uploading Video</string>
    <string name="reset_pitch_speed"><![CDATA[Reset Pitch & Speed]]></string>
    <string name="upvotes">Upvotes</string>
    <string name="downvotes">Downvotes</string>
    <string name="no_words_found_containg_search_string">No words found containing </string>
    <string name="watch_an_ad">Watch an Ad</string>
    <string name="earn_10_coins">Earn 10 coins</string>
    <string name="earn_1_coins">Earn 1 coin</string>
    <string name="earn_5_coins">Earn 5 coins</string>
    <string name="buy_or_earn_coins">Buy/Earn Coins</string>
    <string name="enter_meaning_for_non_english_words">Enter Meaning for non-english words</string>
    <string name="enter_word">Enter Word</string>
</resources>