<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".account.ForgetPasswordActivity"
    android:background="@drawable/background">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signup_textView"
        android:text="@string/forgot_password"
        android:textSize="@dimen/_20sdp"
        android:textColor="@android:color/white"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_18sdp"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/space"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logo"
        android:id="@+id/logo"
        android:layout_above="@+id/linear"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_centerHorizontal="true"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:id="@+id/linear"
        android:gravity="center_horizontal"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:orientation="vertical">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_15sdp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_8sdp"
            android:id="@+id/email"
            android:layout_margin="@dimen/_4sdp"
            android:background="@drawable/edittext_background"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/_15sdp"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/_20sdp"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/send_email"
            android:padding="@dimen/_8sdp"
            android:background="@drawable/button_background"
            android:text="@string/send_email"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_20sdp"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/_20sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_back_to_login"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_13sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:id="@+id/login"/>
    </LinearLayout>


</RelativeLayout>