<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".account.LoginActivity"
    android:background="@drawable/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signup_textView"
        android:text="@string/login"
        android:textSize="25sp"
        android:textColor="@android:color/white"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/space"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logo"
        android:id="@+id/logo"
        android:layout_above="@+id/linear"
        android:layout_centerInParent="true"
        android:layout_marginBottom="50dp"
        android:layout_centerHorizontal="true"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:id="@+id/linear"
        android:gravity="center_horizontal"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:id="@+id/email"
            android:layout_margin="5dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="16sp"/>
        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:id="@+id/password"
            android:layout_margin="5dp"
            android:paddingEnd="40dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="16sp"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/visiblity"
                android:src="@drawable/ic_baseline_visibility_24"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:background="@android:color/transparent"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="15dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_btn"
            android:padding="10dp"
            android:background="@drawable/button_background"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="22sp"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="35dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_new_account"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:id="@+id/create_new"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_password"
                android:layout_marginStart="30dp"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:id="@+id/forget_pass"/>
        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_marginBottom="45dp"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or_login_with"
            android:textColor="@android:color/background_light"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:id="@+id/google"
            android:src="@drawable/ic_google"
            android:padding="5dp"
            android:background="@drawable/button_background2"/>

    </LinearLayout>

</RelativeLayout>