<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:id="@+id/container"
        android:orientation="horizontal">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:id="@+id/profile_image"
            android:layout_gravity="center_vertical"
            android:background="@android:color/transparent"/>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@android:color/black"
                android:id="@+id/name_label"
                android:textSize="@dimen/_9sdp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/name"
                android:textColor="@android:color/black"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_below="@+id/name_label"
                android:background="@drawable/textview_background"
                android:padding="@dimen/_4sdp"
                android:textSize="@dimen/_14sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@android:color/black"
                android:id="@+id/email_label"
                android:layout_below="@+id/name"
                android:layout_marginTop="@dimen/_4sdp"
                android:textSize="@dimen/_9sdp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email"
                android:textColor="@android:color/black"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_below="@+id/email_label"
                android:background="@drawable/textview_background"
                android:padding="@dimen/_4sdp"
                android:textSize="@dimen/_14sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_of_birth"
                android:textColor="@android:color/black"
                android:id="@+id/dob_label"
                android:layout_below="@+id/email"
                android:layout_marginTop="@dimen/_4sdp"
                android:textSize="@dimen/_9sdp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dob"
                android:textColor="@android:color/black"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_below="@+id/dob_label"
                android:background="@drawable/textview_background"
                android:padding="@dimen/_4sdp"
                android:textSize="@dimen/_14sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mobile_number"
                android:textColor="@android:color/black"
                android:id="@+id/mobile_label"
                android:layout_below="@+id/dob"
                android:layout_marginTop="@dimen/_4sdp"
                android:textSize="@dimen/_9sdp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/mobile"
                android:textColor="@android:color/black"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_below="@+id/mobile_label"
                android:background="@drawable/textview_background"
                android:padding="@dimen/_4sdp"
                android:textSize="@dimen/_14sdp"/>



        </RelativeLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logout_btn"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center"
        android:padding="@dimen/_8sdp"
        android:textColor="@android:color/white"
        android:text="@string/logout"
        android:layout_centerInParent="true"
        android:layout_below="@id/container"
        android:textSize="@dimen/_15sdp"
        android:textAllCaps="false"
        android:background="@drawable/button_background"/>



</RelativeLayout>